<resources>
    <string name="app_name">Virgin Money Directory</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_here">You don\'t have account? Register Here!</string>
    <string name="sign_in">Sign in</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">814417439991114</string>
    <string name="facebook_login_protocol_scheme" translatable="false">beb229138df47f0e50019abbfc62a7e0</string>
    <string name="facebook_client_token" translatable="false">beb229138df47f0e50019abbfc62a7e0</string>
    <string name="facebook_app_id">814417439991114</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>